--- a/assignment2/routes/test2.html
+++ b/assignment2/routes/test2.html
@@ -7,5 +7,24 @@
 </head>
 <body>
 <h1>Профориентация</h1>
+<h2>Выбор профессии один из самых важных этапов в жизни человека, ведь большая часть времени бодрствования (около 60%) уходит на работу, подготовку и дорогу до нее. От специальности зависит, в каких кругах происходит общение и будут ли коллеги способствовать развитию личности.
+
+    Всего 22% рабочего населения довольны своей профессией (по данным опроса Райффайзенбанка в 2021 г.). Поэтому важно выбирать любимое направление деятельности для получения удовольствия от работы и достижения наивысших результатов, например, с помощью теста на профориентацию.
+
+    Часто сложно найти любимую профессию, особенно старшеклассникам — без реальной рабочей практики не понять истинный интерес к сфере. Но хуже окончить вуз и после осознать “это не мое”. Рекомендуем заранее попробовать поработать стажером и посмотреть, как в реальности происходит процесс и нравится ли он.
+
+    Неправильно выбранную профессиональную деятельность со временем будет сложно сменить из-за появившихся обязательств и сложности начать с нуля. Потребуется потратить много времени на переквалификацию, работу на начальных позициях.
+
+    Важно помнить: “Мир ускоряется”. И если раньше профессия чаще была одна и на всю жизнь, то сейчас, скорее всего, придется сменить несколько. Поэтому важно уметь адаптироваться и быть открытым к новому. На достижение высокого профессионализма требуется много времени. Андерс Эриксон из Университета штата Флорида, доказал теорию “для достижения мастерства в любом деле необходимо 10 000 часов упорной практики”.
+
+    Количество различных специальностей на данный момент – несколько тысяч, у каждой есть своя специфика, особенности. Чтобы не запутаться во всем этом многообразии и как‐то сузить поиски идеального направления, можно пройти тест на профориентацию и тест Голланда.
+
+    Все профессии можно разделить на несколько категорий:
+
+    человек (врачи, преподаватели, органы правопорядка, психологи, юристы)
+    природа (ветеринар, эколог, агроном, биолог, геолог)
+    техника (водитель, системный администратор, сварщик, токарь, автомеханик, плотник, электромонтер)
+    знаковая система (программист, бухгалтер, экономист, переводчик, математик)
+    художественные образы (дизайнер, художник, архитектор, актер, режиссер)</h2>
 </body>
 </html>
