--- a/assignment2/routes/root.html
+++ b/assignment2/routes/root.html
@@ -105,8 +105,8 @@
     <ul class="">
         <li><a href="test1"><h4>Тест Юнга</h4></a></li>
         <li><a href="test2"><h4>Профориентация</h4></a></li>
-        <li><a href="test3"><h4>Тип личности</h4></a></li>
-        <li><a href="test4"><h4>Язык любви</h4></a></li>
+        <li><a href="test3"><h4>Тип личности по З. Фрейду</h4></a></li>
+        <li><a href="test4"><h4>На кого ты похож из BTS?</h4></a></li>
         <li><a href="test5"><h4>Уровень депрессии</h4></a></li>
         <li><a href="apiCall"><h4>Вдохновись...</h4></a></li>
     </ul>
