--- a/assignment2/routes/test3.html
+++ b/assignment2/routes/test3.html
@@ -7,6 +7,13 @@
     <title>Person</title>
 </head>
 <body>
-<h1>Тип личности</h1>
+<h1>Твоя типология характера по З. Фрейду</h1>
+<h2>З. Фрейда интересовал вопрос характера, поэтому он попытался изучить его с научной точки зрения. В результате своих исследований он пришел к следующим выводам:
+
+    любой здоровый человек проходит через определенные стадии формирования структуры характера;
+    некоторые люди могут застрять на одной из стадии формирования характера;
+    тогда будучи уже взрослым человеком у таких людей сохраняются детские черты характера;
+    эти детские черты характера застревают в определенном органе человека. И именно от этого зависит как будет проявляться поведение человека.
+    Хотите ли узнать на каком этапе развития произошло у вас застревание по мнению З. Фрейда? К какому типу личности относитесь именно вы? Тогда пройдите тест типологии характера по З. Фрейду!</h2>
 </body>
 </html>
