--- a/assignment2/routes/test1.html
+++ b/assignment2/routes/test1.html
@@ -3,17 +3,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Yunga</title>
+    <link rel="stylesheet" href="assignment2/routes/public/css/style.css">
+    <script src="root.js"></script>
+
 </head>
 <body>
-<h1>Тест юнга</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid px-5">
+        <a class="navbar-brand" href="#">Loufoque</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class=" navbar-nav ms-auto">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Tests</a>
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Log in</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
-<h2>Тест Юнга, предложенный известным психологом для определения различных типологических характеристик человека позволяет определить, кем является индивид. Как многим известно, люди бывают интровертами и экстравертами, также, существуют те, кто сочетает в себе качества обоих типов – амбиверты.
 
-    Экстравертам характерны открытость в общении, обилие контактов, импульсивность, поверхностность. Интровертам – направленность на свой внутренний мир, молчаливость, спокойствие, ригидность.
 
-    Если вы хотите узнать, кто Вы есть, пройдите тест Юнга онлайн, и результат вы получите сразу же. Приступим?
+<div class="card text-center">
+    <div class="card-header">
+        Тест Юнга
+    </div>
+    <div class="card-body">
 
-    Подробнее о методике читайте в блоге.</h2>
+        <p class="card-text">Тест Юнга, предложенный известным психологом для определения различных типологических характеристик человека позволяет определить, кем является индивид. Как многим известно, люди бывают интровертами и экстравертами, также, существуют те, кто сочетает в себе качества обоих типов – амбиверты.
+
+            Экстравертам характерны открытость в общении, обилие контактов, импульсивность, поверхностность. Интровертам – направленность на свой внутренний мир, молчаливость, спокойствие, ригидность.
+
+            Если вы хотите узнать, кто Вы есть, пройдите тест Юнга онлайн, и результат вы получите сразу же. Приступим?
+
+            Подробнее о методике читайте в блоге.</p>
+        <a href="#" class="btn btn-primary">Начать тест</a>
+    </div>
+
+</div>
+
+
+
+
+
 </body>
 </html>
