--- a/assignment2/routes/test2.html
+++ b/assignment2/routes/test2.html
@@ -3,22 +3,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Test2</title>
+    <link rel="stylesheet" href="assignment2/routes/public/css/style.css">
+    <script src="root.js"></script>
+
 </head>
 <body>
-<h1>Профориентация</h1>
-<h2>Выбор профессии один из самых важных этапов в жизни человека, ведь большая часть времени бодрствования (около 60%) уходит на работу, подготовку и дорогу до нее. От специальности зависит, в каких кругах происходит общение и будут ли коллеги способствовать развитию личности.
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid px-5">
+        <a class="navbar-brand" href="#">Loufoque</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class=" navbar-nav ms-auto">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Tests</a>
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Log in</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
-    Всего 22% рабочего населения довольны своей профессией (по данным опроса Райффайзенбанка в 2021 г.). Поэтому важно выбирать любимое направление деятельности для получения удовольствия от работы и достижения наивысших результатов, например, с помощью теста на профориентацию.
 
-    Часто сложно найти любимую профессию, особенно старшеклассникам — без реальной рабочей практики не понять истинный интерес к сфере. Но хуже окончить вуз и после осознать “это не мое”. Рекомендуем заранее попробовать поработать стажером и посмотреть, как в реальности происходит процесс и нравится ли он.
+<div class="card text-center">
+    <div class="card-header">
+        Профориентация
+    </div>
+    <div class="card-body">
 
-    Неправильно выбранную профессиональную деятельность со временем будет сложно сменить из-за появившихся обязательств и сложности начать с нуля. Потребуется потратить много времени на переквалификацию, работу на начальных позициях.
+        <p class="card-text">Выбор профессии один из самых важных этапов в жизни человека, ведь большая часть времени бодрствования (около 60%) уходит на работу, подготовку и дорогу до нее. От специальности зависит, в каких кругах происходит общение и будут ли коллеги способствовать развитию личности.
 
-    Важно помнить: “Мир ускоряется”. И если раньше профессия чаще была одна и на всю жизнь, то сейчас, скорее всего, придется сменить несколько. Поэтому важно уметь адаптироваться и быть открытым к новому. На достижение высокого профессионализма требуется много времени. Андерс Эриксон из Университета штата Флорида, доказал теорию “для достижения мастерства в любом деле необходимо 10 000 часов упорной практики”.
+            Всего 22% рабочего населения довольны своей профессией (по данным опроса Райффайзенбанка в 2021 г.). Поэтому важно выбирать любимое направление деятельности для получения удовольствия от работы и достижения наивысших результатов, например, с помощью теста на профориентацию.
 
-    Количество различных специальностей на данный момент – несколько тысяч, у каждой есть своя специфика, особенности. Чтобы не запутаться во всем этом многообразии и как‐то сузить поиски идеального направления, можно пройти тест на профориентацию и тест Голланда.
+            Часто сложно найти любимую профессию, особенно старшеклассникам — без реальной рабочей практики не понять истинный интерес к сфере. Но хуже окончить вуз и после осознать “это не мое”. Рекомендуем заранее попробовать поработать стажером и посмотреть, как в реальности происходит процесс и нравится ли он.
 
-    </h2>
+            Неправильно выбранную профессиональную деятельность со временем будет сложно сменить из-за появившихся обязательств и сложности начать с нуля. Потребуется потратить много времени на переквалификацию, работу на начальных позициях.
+
+            Важно помнить: “Мир ускоряется”. И если раньше профессия чаще была одна и на всю жизнь, то сейчас, скорее всего, придется сменить несколько. Поэтому важно уметь адаптироваться и быть открытым к новому. На достижение высокого профессионализма требуется много времени. Андерс Эриксон из Университета штата Флорида, доказал теорию “для достижения мастерства в любом деле необходимо 10 000 часов упорной практики”.
+
+            Количество различных специальностей на данный момент – несколько тысяч, у каждой есть своя специфика, особенности. Чтобы не запутаться во всем этом многообразии и как‐то сузить поиски идеального направления, можно пройти тест на профориентацию и тест Голланда.</p>
+        <a href="#" class="btn btn-primary">Начать тест</a>
+    </div>
+
+</div>
+
 </body>
 </html>
