--- a/assignment2/routes/test4.html
+++ b/assignment2/routes/test4.html
@@ -3,9 +3,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Love</title>
+    <link rel="stylesheet" href="assignment2/routes/public/css/style.css">
+    <script src="root.js"></script>
+
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid px-5">
+        <a class="navbar-brand" href="#">Loufoque</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class=" navbar-nav ms-auto">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Tests</a>
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Log in</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="card text-center">
+    <div class="card-header">
+        На кого ты похож из BTS?
+    </div>
+    <div class="card-body">
+
+        <p class="card-text">BTS - K-pop-группа, которая имеет армию фанатов и получила аж 4 награды MTV European Music Awards 2020: за лучшую музыкальную группу, фан-базу, песню (трек Dynamite, 2020) и онлайн-выступление. В настоящее время коллектив состоит из 7 участников, которые отличаются яркостью, необычной хореографией и взрывным вокалом. А на кого ты похож (-а) из группы BTS? Пройди наш тест "Кто ты из БТС" и узнай это!</p>
+        <a href="#" class="btn btn-primary">Начать тест</a>
+    </div>
+
+</div>
 <h1>На кого ты похож из BTS?</h1>
 <h2>BTS - K-pop-группа, которая имеет армию фанатов и получила аж 4 награды MTV European Music Awards 2020: за лучшую музыкальную группу, фан-базу, песню (трек Dynamite, 2020) и онлайн-выступление. В настоящее время коллектив состоит из 7 участников, которые отличаются яркостью, необычной хореографией и взрывным вокалом. А на кого ты похож (-а) из группы BTS? Пройди наш тест "Кто ты из БТС" и узнай это!</h2>
 </body>
