--- a/assignment2/routes/test3.html
+++ b/assignment2/routes/test3.html
@@ -4,16 +4,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Person</title>
+    <link rel="stylesheet" href="assignment2/routes/public/css/style.css">
+    <script src="root.js"></script>
+
 </head>
 <body>
-<h1>Твоя типология характера по З. Фрейду</h1>
-<h2>З. Фрейда интересовал вопрос характера, поэтому он попытался изучить его с научной точки зрения. В результате своих исследований он пришел к следующим выводам:
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid px-5">
+        <a class="navbar-brand" href="#">Loufoque</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class=" navbar-nav ms-auto">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Tests</a>
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Log in</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
-    любой здоровый человек проходит через определенные стадии формирования структуры характера;
-    некоторые люди могут застрять на одной из стадии формирования характера;
-    тогда будучи уже взрослым человеком у таких людей сохраняются детские черты характера;
-    эти детские черты характера застревают в определенном органе человека. И именно от этого зависит как будет проявляться поведение человека.
-    Хотите ли узнать на каком этапе развития произошло у вас застревание по мнению З. Фрейда? К какому типу личности относитесь именно вы? Тогда пройдите тест типологии характера по З. Фрейду!</h2>
+<div class="card text-center">
+    <div class="card-header">
+        Твоя типология характера по З. Фрейду
+    </div>
+    <div class="card-body">
+
+        <p class="card-text">З. Фрейда интересовал вопрос характера, поэтому он попытался изучить его с научной точки зрения. В результате своих исследований он пришел к следующим выводам:
+
+            любой здоровый человек проходит через определенные стадии формирования структуры характера;
+            некоторые люди могут застрять на одной из стадии формирования характера;
+            тогда будучи уже взрослым человеком у таких людей сохраняются детские черты характера;
+            эти детские черты характера застревают в определенном органе человека. И именно от этого зависит как будет проявляться поведение человека.
+            Хотите ли узнать на каком этапе развития произошло у вас застревание по мнению З. Фрейда? К какому типу личности относитесь именно вы? Тогда пройдите тест типологии характера по З. Фрейду!</p>
+        <a href="#" class="btn btn-primary">Начать тест</a>
+    </div>
+
+</div>
+
+
 </body>
 </html>
