--- a/assignment2/routes/test5.html
+++ b/assignment2/routes/test5.html
@@ -3,12 +3,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Sad</title>
+    <link rel="stylesheet" href="assignment2/routes/public/css/style.css">
+    <script src="root.js"></script>
+
 </head>
 <body>
-<h1>Уровень депрессии</h1>
-<h2>Тест на депрессию может их определить.В такие моменты человек крайне подвержен внешним воздействиям как психическим, так и физическим. Ему требуется поддержка близких людей и возможно, в особо тяжелых случаях, помощь специалиста. И, все‐таки, она считается болезнью, которая поддается лечению.
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid px-5">
+        <a class="navbar-brand" href="#">Loufoque</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class=" navbar-nav ms-auto">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Tests</a>
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Log in</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
-    Вы, наверняка, задаетесь вопросом: «Если у тебя депрессия, что делать?» Во‐первых, не паниковать и сохранить спокойствие! А может это вовсе и не она, а просто кратковременный стресс. А во‐вторых, пройти тест на депрессию и окончательно развеять сомнения. И только тогда, если результат опросника окажется утвердительным, следует обратиться к квалифицированному специалисту за помощью. Не будем терять времени? Начинаем!</h2>
+<div class="card text-center">
+    <div class="card-header">
+        Уровень депрессии
+    </div>
+    <div class="card-body">
+
+        <p class="card-text">Тест на депрессию может их определить.В такие моменты человек крайне подвержен внешним воздействиям как психическим, так и физическим. Ему требуется поддержка близких людей и возможно, в особо тяжелых случаях, помощь специалиста. И, все‐таки, она считается болезнью, которая поддается лечению.
+
+            Вы, наверняка, задаетесь вопросом: «Если у тебя депрессия, что делать?» Во‐первых, не паниковать и сохранить спокойствие! А может это вовсе и не она, а просто кратковременный стресс. А во‐вторых, пройти тест на депрессию и окончательно развеять сомнения. И только тогда, если результат опросника окажется утвердительным, следует обратиться к квалифицированному специалисту за помощью. Не будем терять времени? Начинаем!</p>
+        <a href="#" class="btn btn-primary">Начать тест</a>
+    </div>
+
+</div>
+
+
 </body>
 </html>
