--- a/assignment2/routes/root.html
+++ b/assignment2/routes/root.html
@@ -24,8 +24,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Home</title>
-    <link rel="stylesheet" href="assignment2/routes/public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="root.js"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -66,7 +67,7 @@
         <div class="container-fluid col-md-5 p-lg-5 mx-auto my-5 ">
             <h1 class="display-4 fw-normal">Loufoque- </h1>
             <p class="lead fw-normal">Будьте с нами и вы сможете получше узнать самого себя также забавно и полезно провести свой досуг</p>
-            <a class="btn btn-outline-primary" href="javascript:void(0);" onclick="soundClick();" id="relax">Relax</a>
+            <a class="btn btn-outline-primary" href="javascript:void(0);" onclick="" id="relax">Relax</a>
 
 
         </div>
@@ -116,9 +117,10 @@
 <!--    </picture>-->
 
 <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="routes/sound.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="routes/sound.js"></script>
 </main>
 </body>
 </html>
