root and api html

--- a/assignment2/routes/root.html
+++ b/assignment2/routes/root.html
@@ -111,6 +111,10 @@
         <li><a href="test5"><h4>Уровень депрессии</h4></a></li>
         <li><a href="apiCall"><h4>Вдохновись...</h4></a></li>
     </ul>
+
+
+
+    <br><br><br>
 <!--    <picture>-->
 <!--        <source srcset="https://kartinkin.net/uploads/posts/2021-07/1625669026_5-kartinkin-com-p-zhabki-milie-arti-art-krasivo-5.jpg" type="image/svg+xml">-->
 <!--        <img src="https://kartinkin.net/uploads/posts/2021-07/1625669026_5-kartinkin-com-p-zhabki-milie-arti-art-krasivo-5.jpg" class="img-fluid img-thumbnail max-width: 100%; height: auto;" alt="https://kartinkin.net/uploads/posts/2021-07/1625669026_5-kartinkin-com-p-zhabki-milie-arti-art-krasivo-5.jpg">-->
@@ -122,5 +126,81 @@
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="routes/sound.js"></script>
 </main>
+
+
+<br><br><br>
+
+<form class="row gy-2 gx-3 align-items-center">
+    <div class="col-auto">
+        <label class="visually-hidden" for="autoSizingInput">Name</label>
+        <input type="text" class="form-control" id="autoSizingInput" placeholder="Jane Doe">
+    </div>
+    <div class="col-auto">
+        <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
+        <div class="input-group">
+            <div class="input-group-text">@</div>
+            <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Username">
+        </div>
+    </div>
+    <div class="col-auto">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="autoSizingCheck">
+            <label class="form-check-label" for="autoSizingCheck">
+                Remember me
+            </label>
+        </div>
+    </div>
+    <div class="col-auto">
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+</form>
+<br><br><br>
+<!-- -->
+<footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+            <!-- Facebook -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-facebook-f"></i
+            ></a>
+
+            <!-- Twitter -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-twitter"></i
+            ></a>
+
+            <!-- Google -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-google"></i
+            ></a>
+
+            <!-- Instagram -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-instagram"></i
+            ></a>
+
+            <!-- Linkedin -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-linkedin-in"></i
+            ></a>
+
+            <!-- Github -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="fab fa-github"></i
+            ></a>
+        </section>
+        <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2022 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+</footer>
 </body>
 </html>
