--- a/assignment2/routes/root.html
+++ b/assignment2/routes/root.html
@@ -112,6 +112,58 @@
         <li><a href="apiCall"><h4>Вдохновись...</h4></a></li>
     </ul>
 
+    <div class="row">
+        <div class="card" style="width: 18rem;">
+            <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Miras Zhugunusov</h5>
+                <p class="card-text">Тест Юнга</p>
+                <a class="button" href="test1" >Начать</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Dequine</h5>
+                <p class="card-text">Профориентация</p>
+                <a class="button" href="test2" >Начать</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
+            <div class="card-body">
+                <h5 class="card-title">104</h5>
+                <p class="card-text">Тип личности по З. Фрейду</p>
+                <a class="button" href="test3">Начать</a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card" style="width: 18rem;">
+            <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
+            <div class="card-body">
+                <h5 class="card-title">ИК</h5>
+                <p class="card-text">На кого ты похож из BTS?</p>
+                <a class="button" href="test4" >Начать</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Scriptonite</h5>
+                <p class="card-text">Уровень депрессии</p>
+                <a class="button" href="test5">Начать</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Ziruza</h5>
+                <p class="card-text">Кто ты?</p>
+                <a class="button" href="test6">Начать</a>
+            </div>
+        </div>
+    </div>
 
 
     <br><br><br>
