--- a/assignment2/routes/root.html
+++ b/assignment2/routes/root.html
@@ -71,38 +71,27 @@
 
 
         </div>
-
-        <div class="product-device shadow-sm d-none d-md-block"></div>
-        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://avatars.mds.yandex.net/i?id=c4afb80145c6484d693ed0d65ae78fbc-5232660-images-thumbs&n=13" class="d-block w-100" alt="https://avatars.mds.yandex.net/i?id=c4afb80145c6484d693ed0d65ae78fbc-5232660-images-thumbs&n=13">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://avatars.mds.yandex.net/i?id=c4afb80145c6484d693ed0d65ae78fbc-5232660-images-thumbs&n=13" class="d-block w-100" alt="https://avatars.mds.yandex.net/i?id=c4afb80145c6484d693ed0d65ae78fbc-5232660-images-thumbs&n=13">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://avatars.mds.yandex.net/i?id=c4afb80145c6484d693ed0d65ae78fbc-5232660-images-thumbs&n=13" class="d-block w-100" alt="https://avatars.mds.yandex.net/i?id=c4afb80145c6484d693ed0d65ae78fbc-5232660-images-thumbs&n=13">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Предыдущий</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Следующий</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active ">
-                <img src="https://the-steppe.com/images/news/475x300/5747-pzeTt50q.JPG" class="d-block w-100" alt="https://the-steppe.com/images/news/475x300/5747-pzeTt50q.JPG">
-            </div>
-            <div class="carousel-item ">
-                <img src="https://the-steppe.com/images/news/475x300/4689-bpRBov3G.jpg" class="d-block w-100" alt="https://the-steppe.com/images/news/475x300/4689-bpRBov3G.jpg">
-            </div>
-            <div class="carousel-item ">
-                <img src="https://i.pinimg.com/originals/9c/65/48/9c65487204ff561256b6a3426c59df22.png" class="d-block w-100" alt="https://i.pinimg.com/originals/9c/65/48/9c65487204ff561256b6a3426c59df22.png">
-            </div>
-
-
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
     <ul class="">
         <li><a href="test1"><h4>Тест Юнга</h4></a></li>
         <li><a href="test2"><h4>Профориентация</h4></a></li>
