--- a/assignment2/routes/root.html
+++ b/assignment2/routes/root.html
@@ -67,7 +67,7 @@
         <div class="container-fluid col-md-5 p-lg-5 mx-auto my-5 ">
             <h1 class="display-4 fw-normal">Loufoque- </h1>
             <p class="lead fw-normal">Будьте с нами и вы сможете получше узнать самого себя также забавно и полезно провести свой досуг</p>
-            <a class="btn btn-outline-primary" href="javascript:void(0);" onclick="" id="relax">Relax</a>
+            <a class="btn btn-outline-primary" href="apiCall" onclick="" id="relax">Вдохновись.</a>
 
 
         </div>
@@ -92,17 +92,10 @@
                 <span class="visually-hidden">Следующий</span>
             </button>
         </div>
-    <ul class="">
-        <li><a href="test1"><h4>Тест Юнга</h4></a></li>
-        <li><a href="test2"><h4>Профориентация</h4></a></li>
-        <li><a href="test3"><h4>Тип личности по З. Фрейду</h4></a></li>
-        <li><a href="test4"><h4>На кого ты похож из BTS?</h4></a></li>
-        <li><a href="test5"><h4>Уровень депрессии</h4></a></li>
-        <li><a href="apiCall"><h4>Вдохновись...</h4></a></li>
-    </ul>
+
 
     <div class="row">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 27rem;">
             <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
             <div class="card-body">
                 <h5 class="card-title">Miras Zhugunusov</h5>
@@ -110,7 +103,7 @@
                 <a class="button" href="test1" >Начать</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 27rem;">
             <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
             <div class="card-body">
                 <h5 class="card-title">Dequine</h5>
@@ -118,7 +111,7 @@
                 <a class="button" href="test2" >Начать</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 27rem;">
             <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
             <div class="card-body">
                 <h5 class="card-title">104</h5>
@@ -128,7 +121,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 27rem;">
             <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
             <div class="card-body">
                 <h5 class="card-title">ИК</h5>
@@ -136,7 +129,7 @@
                 <a class="button" href="test4" >Начать</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 27rem;">
             <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
             <div class="card-body">
                 <h5 class="card-title">Scriptonite</h5>
@@ -144,7 +137,7 @@
                 <a class="button" href="test5">Начать</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 27rem;">
             <img src="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg" class="card-img-top" alt="https://p.favim.com/orig/2018/12/07/modo-de-vida-abstracto-Favim.com-6646833.jpg">
             <div class="card-body">
                 <h5 class="card-title">Ziruza</h5>
@@ -153,8 +146,10 @@
             </div>
         </div>
     </div>
-
-
+<br><br><br>
+<div>
+    <a class="button" href="regis">Регистрация</a>
+</div>
     <br><br><br>
 <!--    <picture>-->
 <!--        <source srcset="https://kartinkin.net/uploads/posts/2021-07/1625669026_5-kartinkin-com-p-zhabki-milie-arti-art-krasivo-5.jpg" type="image/svg+xml">-->
