--- a/assignment2/routes/regis.html
+++ b/assignment2/routes/regis.html
@@ -32,7 +32,7 @@
 </nav>
 
 <h1>Posting data from html to MongoDB Atlas </h1>
-<form>
+<form action="regis.js" method="post">
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
